syntax = "proto3";

package isochrone;

import "google/protobuf/empty.proto";

service IsochroneController {
    rpc List(IsochroneListRequest) returns (stream Isochrone) {}
    rpc Retrieve(IsochroneRetrieveRequest) returns (Isochrone) {}
    rpc Delete(IsochroneRetrieveRequest) returns (Isochrone) {}
}

message IsochroneListRequest {
    int64 warehouse_id = 1;
}

message IsochroneRetrieveRequest {
    int64 warehouse_id = 1;
    int64 timespan = 2;
}

message Isochrone {
    int64 id = 1;
    int64 warehouse_id = 2;
    int64 timespan = 3;
    string all_geom = 4;
}
